[gd_scene load_steps=4 format=3 uid="uid://8qj4xjuweul3"]

[ext_resource type="Texture2D" uid="uid://c6frw8bri2gve" path="res://icon.svg" id="1_kdxec"]
[ext_resource type="Script" path="res://scripts/card.gd" id="1_pbmn2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oox60"]
size = Vector2(75.7582, 127.156)

[node name="card" type="Node2D"]
script = ExtResource("1_pbmn2")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.188235, 0, 0.898039, 1)
texture = ExtResource("1_kdxec")

[node name="lbl_name" type="RichTextLabel" parent="."]
offset_left = -54.0
offset_top = -57.0
offset_right = 54.0
offset_bottom = 55.0
mouse_filter = 2
bbcode_enabled = true
text = "[center]
Inside Run"

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(1.02739, 1.01315)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.370792, 0.578209)
scale = Vector2(1.627, 1)
shape = SubResource("RectangleShape2D_oox60")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
